# Unified-Agent-Context

./: .gitignore  LICENSE  README.md  pyproject.toml
cli/: README.md  pyproject.toml
cli/src/uac_tui/: __init__.py  __main__.py  app.py  driver.py  files.py
cli/tests/: test_app.py  test_driver.py
extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
extension/media/: chat.css
extension/src/: driver.ts  extension.ts
extension/src/chat/: panel.ts
extension/src/memory/: view.ts
extension/src/webview/: main.ts  markdown.ts  tsconfig.json
extension/test/: driver.test.js  files.test.js  markdown.test.js
src/uac/: __init__.py  agents.py  chat.py  cli.py  config.py  context.py  hooks.py  links.py  memory.py  server.py  skills.py  sync.py
tests/: conftest.py  test_agents.py  test_cli_json.py  test_hooks.py  test_links.py  test_memory.py  test_server.py  test_skills.py  test_sync.py
